Added Service Account

--- a/deployment/k8s/backend-deployment.yaml
+++ b/deployment/k8s/backend-deployment.yaml
@@ -21,6 +21,8 @@ spec:
       labels:
         app: biasguard-backend
         component: api
+    spec:
+      serviceAccountName : biasguard 
     
     spec:
       containers:
